SED-4295 Addding bulk refresh for AP and check for name uniqueness